<resources>
    <string name="app_name">Finances Crud with Kotlin and SQLite</string>
    <string name="lan_ar">Lançar</string>
    <string name="saldo">Saldo</string>
    <string name="ver_lan_amentos">Ver Lançamentos</string>
    <string name="valor">Valor:</string>
    <string name="tipo">Tipo:</string>
    <string name="detalhe">Detalhe:</string>
    <string name="data_lanc">Data Lanc.:</string>
    <string name="selecione_a_data_de_lan_amento">Selecione a Data de Lançamento</string>
    <string name="saldo_r">Saldo: R$</string>
    <string name="r">R$</string>
    <string name="Tipo">Tipo</string>
    <string name="data_de_lan_amento">Data de Lançamento</string>
    <string name="Valor">Valor</string>
    <string name="Detalhe">Detalhe</string>
</resources>